fixed styling bug to get items to wrap

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,7 @@
 h1 {
     width: 1200px;
     margin: auto;
+    padding-left: 30px;
 }
 
 header {
